# pybind11_catkin

./: CHANGELOG.rst  CMakeLists.txt  package.xml
.github/workflows/: industrial_ci_action.yml
cmake/: pybind11_catkin.cmake.in
